--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dev": true,
   "scripts": {
     "start": "node server",
-    "dev": "node dev",
+    "dev": "nodemon server",
+    "dev-legacy": "node dev",
     "test": "eslint --format codeframe --ext .js,.vue . && pug-lint server/views && jest",
     "cypress:open": "cypress open"
   },
@@ -119,12 +120,12 @@
     "moment-timezone": "0.5.31",
     "ms": "2.1.3",
     "multer": "1.4.4",
-    "nanoid": "3.2.0",
+    "nanoid": "3.3.2",
     "node-2fa": "1.1.2",
     "node-cache": "5.1.2",
     "nodemailer": "6.7.3",
     "objection": "3.0.1",
-    "passport": "0.4.1",
+    "passport": "0.5.2",
     "passport-auth0": "1.4.2",
     "passport-azure-ad": "4.3.1",
     "passport-cas": "0.1.1",
@@ -135,13 +136,13 @@
     "passport-gitlab2": "5.0.0",
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.0",
-    "passport-ldapauth": "2.1.4",
+    "passport-ldapauth": "3.0.1",
     "passport-local": "1.0.0",
     "passport-microsoft": "0.1.0",
     "passport-oauth2": "1.6.1",
     "passport-okta-oauth": "0.0.1",
-    "passport-openidconnect": "0.0.2",
-    "passport-saml": "1.3.5",
+    "passport-openidconnect": "0.1.1",
+    "passport-saml": "3.2.1",
     "passport-slack-oauth2": "1.1.1",
     "passport-twitch-oauth": "1.0.0",
     "pem-jwk": "2.0.0",
@@ -241,7 +242,7 @@
     "filepond-plugin-file-validate-type": "1.2.6",
     "filesize.js": "2.0.0",
     "graphql-persisted-document-loader": "2.0.0",
-    "graphql-tag": "2.11.0",
+    "graphql-tag": "2.12.6",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "4.5.0",
     "html-webpack-pug-plugin": "2.0.0",
@@ -256,6 +257,7 @@
     "mini-css-extract-plugin": "0.11.3",
     "moment-duration-format": "2.3.2",
     "moment-timezone-data-webpack-plugin": "1.3.0",
+    "nodemon": "2.0.15",
     "offline-plugin": "5.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pako": "1.0.11",
@@ -265,7 +267,7 @@
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
-    "postcss-selector-parser": "6.0.9",
+    "postcss-selector-parser": "6.0.10",
     "prismjs": "1.22.0",
     "pug-lint": "2.6.0",
     "pug-loader": "2.4.0",
@@ -371,5 +373,14 @@
     "type": "opencollective",
     "url": "https://opencollective.com/wikijs",
     "logo": "https://opencollective.com/opencollective/logo.txt"
+  },
+  "nodemonConfig": {
+    "env": {
+      "NODE_ENV": "development"
+    },
+    "ext": "js,json,graphql,gql",
+    "watch": [
+      "server/"
+    ]
   }
 }
