--- a/server/modules/authentication/oauth2/definition.yml
+++ b/server/modules/authentication/oauth2/definition.yml
@@ -59,3 +59,8 @@ props:
     title: Logout URL
     hint: (optional) Logout URL on the OAuth2 provider where the user will be redirected to complete the logout process.
     order: 9
+  scope:
+    type: String
+    title: Scope
+    hint: (optional) Application Client permission scopes.
+    order: 10
