--- a/server/modules/authentication/oauth2/definition.yml
+++ b/server/modules/authentication/oauth2/definition.yml
@@ -64,3 +64,9 @@ props:
     title: Scope
     hint: (optional) Application Client permission scopes.
     order: 10
+  useQueryStringForAccessToken:
+    type: Boolean
+    default: false
+    title: Pass access token via GET query string to User Info Endpoint
+    hint: (optional) Pass the access token in an `access_token` parameter attached to the GET query string of the User Info Endpoint URL. Otherwise the access token will be passed in the Authorization header.
+    order: 11
