feat(helm): add support for spec.ingressClassName to Ingress template

--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -54,6 +54,7 @@ service:
 
 ingress:
   enabled: true
+  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
