--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -52,7 +52,7 @@ ADD https://raw.githubusercontent.com/eficode/wait-for/v2.1.3/wait-for /usr/loca
 RUN chmod +rx /usr/local/bin/wait-for
 
 # Copy the startup file
-COPY init.sh /docker-init.sh
+COPY app-init.sh /docker-init.sh
 RUN sed -i 's/\r$//' /docker-init.sh && \
     chmod +x /docker-init.sh
 
