chore: auto launch terminal group on start

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
   "recommendations": [
     "EditorConfig.editorconfig",
-    "dbaeumer.vscode-eslint",
-    "mrmlnc.vscode-puglint",
+    "dbaeumer.vscode-eslint"
   ]
 }
