fix: yarn 3 on ux project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,7 @@
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or with the host.
-	"forwardPorts": [3000, 5432, 8000],
+	"forwardPorts": [3000, 3001, 5432, 8000],
 
   "portsAttributes": {
     "3000": {
@@ -67,7 +67,7 @@
 	"postCreateCommand": "/docker-init.sh",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "node",
+	"remoteUser": "node",
 	"features": {
     "common": {
       "installZsh": true,
