--- a/ux/.gitignore
+++ b/ux/.gitignore
@@ -27,3 +27,12 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
