--- a/ux/package.json
+++ b/ux/package.json
@@ -11,29 +11,29 @@
     "lint": "eslint --ext .js,.vue ./"
   },
   "dependencies": {
-    "@apollo/client": "3.5.10",
-    "@codemirror/autocomplete": "0.19.15",
-    "@codemirror/basic-setup": "0.19.3",
+    "@apollo/client": "3.6.1",
+    "@codemirror/autocomplete": "0.20.0",
+    "@codemirror/basic-setup": "0.20.0",
     "@codemirror/closebrackets": "0.19.2",
-    "@codemirror/commands": "0.19.8",
+    "@codemirror/commands": "0.20.0",
     "@codemirror/comment": "0.19.1",
-    "@codemirror/fold": "0.19.3",
+    "@codemirror/fold": "0.19.4",
     "@codemirror/gutter": "0.19.9",
     "@codemirror/highlight": "0.19.8",
     "@codemirror/history": "0.19.2",
-    "@codemirror/lang-css": "0.19.3",
-    "@codemirror/lang-html": "0.19.4",
-    "@codemirror/lang-javascript": "0.19.7",
-    "@codemirror/lang-json": "0.19.2",
-    "@codemirror/lang-markdown": "0.19.6",
+    "@codemirror/lang-css": "0.20.0",
+    "@codemirror/lang-html": "0.20.0",
+    "@codemirror/lang-javascript": "0.20.0",
+    "@codemirror/lang-json": "0.20.0",
+    "@codemirror/lang-markdown": "0.20.0",
     "@codemirror/matchbrackets": "0.19.4",
-    "@codemirror/search": "0.19.10",
-    "@codemirror/state": "0.19.9",
+    "@codemirror/search": "0.20.1",
+    "@codemirror/state": "0.20.0",
     "@codemirror/tooltip": "0.19.16",
-    "@codemirror/view": "0.19.48",
-    "@lezer/common": "0.15.12",
-    "@quasar/extras": "1.13.5",
-    "@tiptap/core": "2.0.0-beta.174",
+    "@codemirror/view": "0.20.3",
+    "@lezer/common": "0.16.0",
+    "@quasar/extras": "1.13.6",
+    "@tiptap/core": "2.0.0-beta.175",
     "@tiptap/extension-code-block": "2.0.0-beta.37",
     "@tiptap/extension-code-block-lowlight": "2.0.0-beta.68",
     "@tiptap/extension-color": "2.0.0-beta.9",
@@ -44,37 +44,37 @@
     "@tiptap/extension-highlight": "2.0.0-beta.33",
     "@tiptap/extension-history": "2.0.0-beta.21",
     "@tiptap/extension-image": "2.0.0-beta.27",
-    "@tiptap/extension-mention": "2.0.0-beta.95",
+    "@tiptap/extension-mention": "2.0.0-beta.96",
     "@tiptap/extension-placeholder": "2.0.0-beta.48",
     "@tiptap/extension-table": "2.0.0-beta.48",
     "@tiptap/extension-table-cell": "2.0.0-beta.20",
     "@tiptap/extension-table-header": "2.0.0-beta.22",
     "@tiptap/extension-table-row": "2.0.0-beta.19",
-    "@tiptap/extension-task-item": "2.0.0-beta.31",
+    "@tiptap/extension-task-item": "2.0.0-beta.32",
     "@tiptap/extension-task-list": "2.0.0-beta.26",
     "@tiptap/extension-text-align": "2.0.0-beta.29",
     "@tiptap/extension-text-style": "2.0.0-beta.23",
     "@tiptap/extension-typography": "2.0.0-beta.20",
-    "@tiptap/starter-kit": "2.0.0-beta.183",
-    "@tiptap/vue-3": "2.0.0-beta.90",
+    "@tiptap/starter-kit": "2.0.0-beta.184",
+    "@tiptap/vue-3": "2.0.0-beta.91",
     "@vue/apollo-option": "4.0.0-alpha.16",
     "apollo-upload-client": "17.0.0",
-    "browser-fs-access": "0.26.1",
+    "browser-fs-access": "0.29.4",
     "clipboard": "2.0.10",
     "filesize": "8.0.7",
     "filesize-parser": "1.5.0",
-    "graphql": "16.3.0",
+    "graphql": "16.4.0",
     "graphql-tag": "2.12.6",
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
     "lodash": "4.17.21",
-    "luxon": "2.3.1",
+    "luxon": "2.3.2",
     "pinia": "2.0.13",
     "pug": "3.0.2",
     "quasar": "2.6.6",
     "tippy.js": "6.3.7",
     "uuid": "8.3.2",
-    "v-network-graph": "0.5.9",
+    "v-network-graph": "0.5.13",
     "vue": "3.2.31",
     "vue-i18n": "9.1.9",
     "vue-router": "4.0.14",
@@ -84,19 +84,20 @@
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@quasar/app-vite": "1.0.0-beta.14",
-    "@types/lodash": "4.14.181",
-    "autoprefixer": "10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-standard": "17.0.0-1",
+    "@types/lodash": "4.14.182",
+    "autoprefixer": "10.4.5",
+    "eslint": "8.14.0",
+    "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.1.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-vue": "8.6.0"
+    "eslint-plugin-vue": "8.7.1"
   },
   "engines": {
     "node": "^18 || ^16",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   },
-  "eslint.packageManager": "yarn"
+  "eslint.packageManager": "yarn",
+  "packageManager": "yarn@3.2.0"
 }
