feat(admin): migrate locale + login + storage views to vue 3 composable

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,10 +32,10 @@
     "arcanis.vscode-zipfs",
 		"dbaeumer.vscode-eslint",
 		"eamodio.gitlens",
-		"johnsoncodehk.volar",
+		"Vue.volar",
 		"oderwat.indent-rainbow",
 		"redhat.vscode-yaml",
-		"visualstudioexptteam.vscodeintellicode",
+		"VisualStudioExptTeam.vscodeintellicode",
     "editorconfig.editorconfig",
     "lokalise.i18n-ally",
     "mrmlnc.vscode-duplicate",
