--- a/ux/package.json
+++ b/ux/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint --ext .js,.vue ./"
   },
   "dependencies": {
-    "@apollo/client": "3.6.1",
-    "@codemirror/autocomplete": "0.20.0",
+    "@apollo/client": "3.6.4",
+    "@codemirror/autocomplete": "0.20.1",
     "@codemirror/basic-setup": "0.20.0",
     "@codemirror/closebrackets": "0.19.2",
     "@codemirror/commands": "0.20.0",
@@ -25,15 +25,15 @@
     "@codemirror/lang-html": "0.20.0",
     "@codemirror/lang-javascript": "0.20.0",
     "@codemirror/lang-json": "0.20.0",
-    "@codemirror/lang-markdown": "0.20.0",
+    "@codemirror/lang-markdown": "0.20.1",
     "@codemirror/matchbrackets": "0.19.4",
     "@codemirror/search": "0.20.1",
     "@codemirror/state": "0.20.0",
     "@codemirror/tooltip": "0.19.16",
-    "@codemirror/view": "0.20.3",
+    "@codemirror/view": "0.20.6",
     "@lezer/common": "0.16.0",
-    "@quasar/extras": "1.13.6",
-    "@tiptap/core": "2.0.0-beta.175",
+    "@quasar/extras": "1.14.0",
+    "@tiptap/core": "2.0.0-beta.176",
     "@tiptap/extension-code-block": "2.0.0-beta.37",
     "@tiptap/extension-code-block-lowlight": "2.0.0-beta.68",
     "@tiptap/extension-color": "2.0.0-beta.9",
@@ -44,9 +44,9 @@
     "@tiptap/extension-highlight": "2.0.0-beta.33",
     "@tiptap/extension-history": "2.0.0-beta.21",
     "@tiptap/extension-image": "2.0.0-beta.27",
-    "@tiptap/extension-mention": "2.0.0-beta.96",
+    "@tiptap/extension-mention": "2.0.0-beta.97",
     "@tiptap/extension-placeholder": "2.0.0-beta.48",
-    "@tiptap/extension-table": "2.0.0-beta.48",
+    "@tiptap/extension-table": "2.0.0-beta.49",
     "@tiptap/extension-table-cell": "2.0.0-beta.20",
     "@tiptap/extension-table-header": "2.0.0-beta.22",
     "@tiptap/extension-table-row": "2.0.0-beta.19",
@@ -55,38 +55,38 @@
     "@tiptap/extension-text-align": "2.0.0-beta.29",
     "@tiptap/extension-text-style": "2.0.0-beta.23",
     "@tiptap/extension-typography": "2.0.0-beta.20",
-    "@tiptap/starter-kit": "2.0.0-beta.184",
+    "@tiptap/starter-kit": "2.0.0-beta.185",
     "@tiptap/vue-3": "2.0.0-beta.91",
-    "@vue/apollo-option": "4.0.0-alpha.16",
+    "@vue/apollo-option": "4.0.0-alpha.17",
     "apollo-upload-client": "17.0.0",
-    "browser-fs-access": "0.29.4",
-    "clipboard": "2.0.10",
+    "browser-fs-access": "0.29.5",
+    "clipboard": "2.0.11",
     "filesize": "8.0.7",
     "filesize-parser": "1.5.0",
-    "graphql": "16.4.0",
+    "graphql": "16.5.0",
     "graphql-tag": "2.12.6",
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
     "lodash": "4.17.21",
-    "luxon": "2.3.2",
-    "pinia": "2.0.13",
+    "luxon": "2.4.0",
+    "pinia": "2.0.14",
     "pug": "3.0.2",
-    "quasar": "2.6.6",
+    "quasar": "2.7.0",
     "tippy.js": "6.3.7",
     "uuid": "8.3.2",
-    "v-network-graph": "0.5.13",
+    "v-network-graph": "0.5.16",
     "vue": "3.2.31",
-    "vue-i18n": "9.1.9",
-    "vue-router": "4.0.14",
+    "vue-i18n": "9.1.10",
+    "vue-router": "4.0.15",
     "vuedraggable": "4.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "3.4.0",
-    "@quasar/app-vite": "1.0.0-beta.14",
+    "@quasar/app-vite": "1.0.0",
     "@types/lodash": "4.14.182",
-    "autoprefixer": "10.4.5",
-    "eslint": "8.14.0",
+    "autoprefixer": "10.4.7",
+    "eslint": "8.16.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.2.0",
