initial work adding an option; does not load in the UI correctly yet.

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -55,6 +55,7 @@ defaults:
       theme: 'default'
       iconset: 'md'
       darkMode: false
+      injectInEditor: false
     auth:
       autoLogin: false
       enforce2FA: false
