--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -55,10 +55,9 @@ defaults:
       theme: 'default'
       iconset: 'md'
       darkMode: false
-      minTocLevel: 0
-      tocLevel: 2
-      tocCollapseLevel: 2
-      doUseTocDefault: true
+      tocDepth:
+        min: 1
+        max: 2
     auth:
       autoLogin: false
       enforce2FA: false
