Restore concatenated CA string logic for db connnections, make rejectUnauthorized configurable through environment variable

--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -53,6 +53,8 @@ spec:
               value: "{{ default "false" .Values.postgresql.ssl }}"
             - name: DB_SSL_CA
               value: "{{ default "" .Values.postgresql.ca }}"
+            - name: DB_SSL_REJECTUNAUTHORIZED
+              value: "{{ default "true" .Values.postgresql.rejectUnauthorized }}"
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
