--- a/server/modules/search/aws/definition.yml
+++ b/server/modules/search/aws/definition.yml
@@ -85,4 +85,10 @@ props:
       - 'zh-Hans'
       - 'zh-Hant'
     order: 6
+  maxHits:
+    type: Number
+    title: Max Hits
+    hint: The maximum number of results returned by the search engine.
+    default: 100
+    order: 7
 
