--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -54,7 +54,7 @@ spec:
             - name: DB_SSL_CA
               value: "{{ default "" .Values.postgresql.ca }}"
             - name: DB_SSL_REJECTUNAUTHORIZED
-              value: "{{ default "true" .Values.postgresql.rejectUnauthorized }}"
+              value: "{{ hasKey .Values.postgresql "rejectUnauthorized" | ternary .Values.postgresql.rejectUnauthorized true }}"
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
