feat(admin): migrate theme + api + utilities to vue 3 composition

--- a/ux/package.json
+++ b/ux/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.8",
-    "@codemirror/autocomplete": "0.20.3",
+    "@codemirror/autocomplete": "6.0.2",
     "@codemirror/basic-setup": "0.20.0",
     "@codemirror/closebrackets": "0.19.2",
-    "@codemirror/commands": "0.20.0",
+    "@codemirror/commands": "6.0.0",
     "@codemirror/comment": "0.19.1",
     "@codemirror/fold": "0.19.4",
     "@codemirror/gutter": "0.19.9",
     "@codemirror/highlight": "0.19.8",
     "@codemirror/history": "0.19.2",
-    "@codemirror/lang-css": "0.20.0",
-    "@codemirror/lang-html": "0.20.0",
-    "@codemirror/lang-javascript": "0.20.1",
-    "@codemirror/lang-json": "0.20.0",
-    "@codemirror/lang-markdown": "0.20.1",
+    "@codemirror/lang-css": "6.0.0",
+    "@codemirror/lang-html": "6.0.0",
+    "@codemirror/lang-javascript": "6.0.0",
+    "@codemirror/lang-json": "6.0.0",
+    "@codemirror/lang-markdown": "6.0.0",
     "@codemirror/matchbrackets": "0.19.4",
-    "@codemirror/search": "0.20.1",
-    "@codemirror/state": "0.20.1",
+    "@codemirror/search": "6.0.0",
+    "@codemirror/state": "6.0.1",
     "@codemirror/tooltip": "0.19.16",
-    "@codemirror/view": "0.20.7",
-    "@lezer/common": "0.16.1",
+    "@codemirror/view": "6.0.1",
+    "@lezer/common": "1.0.0",
     "@quasar/extras": "1.14.0",
     "@tiptap/core": "2.0.0-beta.176",
     "@tiptap/extension-code-block": "2.0.0-beta.37",
@@ -61,6 +61,7 @@
     "apollo-upload-client": "17.0.0",
     "browser-fs-access": "0.29.6",
     "clipboard": "2.0.11",
+    "codemirror": "6.0.0",
     "filesize": "9.0.9",
     "filesize-parser": "1.5.0",
     "graphql": "16.5.0",
@@ -71,12 +72,12 @@
     "luxon": "2.4.0",
     "pinia": "2.0.14",
     "pug": "3.0.2",
-    "quasar": "2.7.2",
+    "quasar": "2.7.3",
     "tippy.js": "6.3.7",
     "uuid": "8.3.2",
     "v-network-graph": "0.5.19",
     "vue": "3.2.37",
-    "vue-codemirror": "5.1.0",
+    "vue-codemirror": "6.0.0",
     "vue-i18n": "9.1.10",
     "vue-router": "4.0.16",
     "vuedraggable": "4.1.0",
