ci: update test telegram workflow
[skip ci]

--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     
       - name: Notify Telegram Channel
-        uses: appleboy/telegram-action@0.0.3
+        uses: appleboy/telegram-action@v0.1.1
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
