ci: fix telegram notify on build release workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -360,16 +360,15 @@ jobs:
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
         
     - name: Notify Telegram Channel
-      uses: appleboy/telegram-action@0.0.3
+      uses: appleboy/telegram-action@v0.1.1
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         format: markdown
+        disable_web_page_preview: true
         message: |
-          Wiki.js **${{ github.ref_name }}** has been released!
-          
+          Wiki.js *${{ github.ref_name }}* has been released!
           See [release notes](https://github.com/requarks/wiki/releases) for details.
-        
 
   build-do-image:
     name: Build DigitalOcean Image
